add sections in html file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			<ul>
 				<li>
 					<a href="#">
-							HOME
+						HOME
 					</a>
 				</li>
 				<li>
@@ -30,10 +30,37 @@
 			</ul>
 			<div>
 					<a href="">
-						<img src="pic/headerpic.svg">
+						<img src="pic/headerpic.svg" alt="headersgv">
 					</a>
 			</div>
 		</header>
+	</div>	
+	<div>
+		<section>
+			<div>
+				<p>
+					LOREM IPSUM DOLOR SI T AMET, CONSECTETUR ADIPISCING ELI T.AENEAN E T EROS ULLANCORPER,ELEIFEND EROS VITAE, ALIQUAM DOLOR.IN U T EX AC MAURIS CURSUS COMMODO VITAEEUMETUS.IN HAC NABI TASSE PL ATE A DICTUMS T.VI VAMUS AT TURPIS LECTUS.PRAESEN T CONVALLIS ANTE LEO,TEMPOR MOLESTIE ELI T VESTIBULUM AC.MAECENAS FINIBUS URNA NISI,COMMODO HENDERI T DUI SOLLICITUDIN NEC.PRASEN T EU PLACER AT LACUS.SED E T DAPIBUS FELIS,EGE T VOLUT PAT ORCI.DONEC ELEIFEND METUS IN CONDIMENTUM AUCTOR.QUISQUE U LTRICES NIS L SIT AMET DICTUM CONDIMENTUM.NAM EU LEO TELLUS
+				</p>
+				<p>
+					IN FINIBUS PLACER AT BIBENDUM.VIVAMUS SED MAURIS NISI.SUSPENDISSE NEC NISI SED JUS TOALIQUE T VARIUS IDE E T ELIT.ALIQUAM IACULIS SUSCIPI T PHARETRA.QUISQUE NEC SUSCIPI T ELIT.SED AC LUCTUS SEM,EU ECELERISQUE JUS TO.VESTIBULUM ANTE IPSUM PRIMIS IN FAUCIBUS ORCI LOCTUS E TULTRICES POSURE CUBILI A CURAE; QUISQUE NECSCELERISQUEJUS TO,AC AUCTOR RISUS.PRAESEN T ID URNA LUCTUS,AUCTOR EROS EGE T.SOLLICITUDIN MAURIS.AENEAN VIVERR A SEM UT MAGNA ORNARE TEMPORET SED NUNC.SUSPENDISSE AT PORTA
+				</p>
+				<img src="pic/boxpic.jpg">
+			</div>
+		</section>
+		<section>
+			<div>
+				<p>
+					LOREM IPSUM DOLOR SI T AMET, CONSECTETUR ADIPISCING ELI T.AENEAN E T EROS ULLANCORPER,ELEIFEND EROS VITAE, ALIQUAM DOLOR.IN U T EX AC MAURIS CURSUS COMMODO VITAEEUMETUS.IN HAC NABI TASSE PL ATE A DICTUMS T.VI VAMUS AT TURPIS LECTUS.PRAESEN T CONVALLIS ANTE LEO,TEMPOR MOLESTIE ELI T VESTIBULUM AC.MAECENAS FINIBUS URNA NISI,COMMODO HENDERI T DUI SOLLICITUDIN NEC.PRASEN T EU PLACER AT LACUS.SED E T DAPIBUS FELIS,EGE T VOLUT PAT ORCI.DONEC ELEIFEND METUS IN CONDIMENTUM AUCTOR.QUISQUE U LTRICES NIS L SIT AMET DICTUM CONDIMENTUM.NAM EU LEO TELLUS
+				</p>
+				<p>
+					IN FINIBUS PLACER AT BIBENDUM.VIVAMUS SED MAURIS NISI.SUSPENDISSE NEC NISI SED JUS TOALIQUE T VARIUS IDE E T ELIT.ALIQUAM IACULIS SUSCIPI T PHARETRA.QUISQUE NEC SUSCIPI T ELIT.SED AC LUCTUS SEM,EU ECELERISQUE JUS TO.VESTIBULUM ANTE IPSUM PRIMIS IN FAUCIBUS ORCI LOCTUS E TULTRICES POSURE CUBILI A CURAE; QUISQUE NECSCELERISQUEJUS TO,AC AUCTOR RISUS.PRAESEN T ID URNA LUCTUS,AUCTOR EROS EGE T.SOLLICITUDIN MAURIS.AENEAN VIVERR A SEM UT MAGNA ORNARE TEMPORET SED NUNC.SUSPENDISSE AT PORTA
+				</p>
+				<img src="pic/boxpic.jpg">
+			</div>
+		</section>
+		</div>
+
+
 	</div>
 
 </body>
