add main.css file

--- a/index.html
+++ b/index.html
@@ -1,63 +1,70 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="styles/reset.css">
+	<link rel="stylesheet" type="text/css" href="styles/main.css">
 	<title>lesson6</title>
 </head>
 <body>
-	<div>
+	<div class="content">
 		<header>
-			<ul>
-				<li>
+			<div>
+					<a href="">
+						<img class="logo" src="pic/headerpic.svg" alt="headersgv">
+					</a>
+			</div>
+			<ul class="navbar">
+				<li class="navbar-li">
 					<a href="#">
 						HOME
 					</a>
 				</li>
-				<li>
+				<li class="navbar-li">
 					<a href="#">
 						NEWS
 					</a>
 				</li>
-				<li>
+				<li class="navbar-li">
 					<a href="#">
 						ABOUT
 					</a>
 				</li>
-				<li>
+				<li class="navbar-li">
 					<a href="#">
 						CONTACT
 					</a>
 				</li>
 			</ul>
-			<div>
-					<a href="">
-						<img src="pic/headerpic.svg" alt="headersgv">
-					</a>
-			</div>
+			<div class="clear"></div>
 		</header>
-	</div>	
-	<div>
-		<section>
-			<div>
-				<p>
+		<div class="full-box">
+		<section class="box1">
+			<div class="firstbox">
+			<div class="container1">
+				<img class="boximg" src="pic/boxpic.jpg" alt="boximg">
+				<p class="lorem1">
 					LOREM IPSUM DOLOR SI T AMET, CONSECTETUR ADIPISCING ELI T.AENEAN E T EROS ULLANCORPER,ELEIFEND EROS VITAE, ALIQUAM DOLOR.IN U T EX AC MAURIS CURSUS COMMODO VITAEEUMETUS.IN HAC NABI TASSE PL ATE A DICTUMS T.VI VAMUS AT TURPIS LECTUS.PRAESEN T CONVALLIS ANTE LEO,TEMPOR MOLESTIE ELI T VESTIBULUM AC.MAECENAS FINIBUS URNA NISI,COMMODO HENDERI T DUI SOLLICITUDIN NEC.PRASEN T EU PLACER AT LACUS.SED E T DAPIBUS FELIS,EGE T VOLUT PAT ORCI.DONEC ELEIFEND METUS IN CONDIMENTUM AUCTOR.QUISQUE U LTRICES NIS L SIT AMET DICTUM CONDIMENTUM.NAM EU LEO TELLUS
 				</p>
-				<p>
+				<p class="lorem2">
 					IN FINIBUS PLACER AT BIBENDUM.VIVAMUS SED MAURIS NISI.SUSPENDISSE NEC NISI SED JUS TOALIQUE T VARIUS IDE E T ELIT.ALIQUAM IACULIS SUSCIPI T PHARETRA.QUISQUE NEC SUSCIPI T ELIT.SED AC LUCTUS SEM,EU ECELERISQUE JUS TO.VESTIBULUM ANTE IPSUM PRIMIS IN FAUCIBUS ORCI LOCTUS E TULTRICES POSURE CUBILI A CURAE; QUISQUE NECSCELERISQUEJUS TO,AC AUCTOR RISUS.PRAESEN T ID URNA LUCTUS,AUCTOR EROS EGE T.SOLLICITUDIN MAURIS.AENEAN VIVERR A SEM UT MAGNA ORNARE TEMPORET SED NUNC.SUSPENDISSE AT PORTA
 				</p>
-				<img src="pic/boxpic.jpg">
+				
+			</div>
+		</div>
+		</section>
+		<section class="box2">
+			<div class="container2">
+				<img class="boximg" src="pic/boxpic.jpg" alt="boximg">
+				<p class="lorem11">
+					.LOREM IPSUM DOLOR SI T AMET, CONSECTETUR ADIPISCING ELI T.AENEAN E T EROS ULLANCORPER,ELEIFEND EROS VITAE, ALIQUAM DOLOR.IN U T EX AC MAURIS CURSUS COMMODO VITAEEUMETUS.IN HAC NABI TASSE PL ATE A DICTUMS T.VI VAMUS AT TURPIS LECTUS.PRAESEN T CONVALLIS ANTE LEO,TEMPOR MOLESTIE ELI T VESTIBULUM AC.MAECENAS FINIBUS URNA NISI,COMMODO HENDERI T DUI SOLLICITUDIN NEC.PRASEN T EU PLACER AT LACUS.SED E T DAPIBUS FELIS,EGE T VOLUT PAT ORCI.DONEC ELEIFEND METUS IN CONDIMENTUM AUCTOR.QUISQUE U LTRICES NIS L SIT AMET DICTUM CONDIMENTUM.NAM EU LEO TELLUS
+				</p>
+				<p class="lorem22"> 
+              	IN FINIBUS PLACER AT BIBENDUM.VIVAMUS SED MAURIS NISI.SUSPENDISSE NEC NISI SED JUS TOALIQUE T VARIUS IDE E T ELIT.ALIQUAM IACULIS SUSCIPI T PHARETRA.QUISQUE NEC SUSCIPI T ELIT.SED AC LUCTUS SEM,EU ECELERISQUE JUS TO.VESTIBULUM
+				</p>
+				
 			</div>
 		</section>
-		<section>
-			<div>
-				<p>
-					LOREM IPSUM DOLOR SI T AMET, CONSECTETUR ADIPISCING ELI T.AENEAN E T EROS ULLANCORPER,ELEIFEND EROS VITAE, ALIQUAM DOLOR.IN U T EX AC MAURIS CURSUS COMMODO VITAEEUMETUS.IN HAC NABI TASSE PL ATE A DICTUMS T.VI VAMUS AT TURPIS LECTUS.PRAESEN T CONVALLIS ANTE LEO,TEMPOR MOLESTIE ELI T VESTIBULUM AC.MAECENAS FINIBUS URNA NISI,COMMODO HENDERI T DUI SOLLICITUDIN NEC.PRASEN T EU PLACER AT LACUS.SED E T DAPIBUS FELIS,EGE T VOLUT PAT ORCI.DONEC ELEIFEND METUS IN CONDIMENTUM AUCTOR.QUISQUE U LTRICES NIS L SIT AMET DICTUM CONDIMENTUM.NAM EU LEO TELLUS
-				</p>
-				<p>
-					IN FINIBUS PLACER AT BIBENDUM.VIVAMUS SED MAURIS NISI.SUSPENDISSE NEC NISI SED JUS TOALIQUE T VARIUS IDE E T ELIT.ALIQUAM IACULIS SUSCIPI T PHARETRA.QUISQUE NEC SUSCIPI T ELIT.SED AC LUCTUS SEM,EU ECELERISQUE JUS TO.VESTIBULUM ANTE IPSUM PRIMIS IN FAUCIBUS ORCI LOCTUS E TULTRICES POSURE CUBILI A CURAE; QUISQUE NECSCELERISQUEJUS TO,AC AUCTOR RISUS.PRAESEN T ID URNA LUCTUS,AUCTOR EROS EGE T.SOLLICITUDIN MAURIS.AENEAN VIVERR A SEM UT MAGNA ORNARE TEMPORET SED NUNC.SUSPENDISSE AT PORTA
-				</p>
-				<img src="pic/boxpic.jpg">
-			</div>
-		</section>
+	</div>
 		</div>
 
 
